data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_893.wast
;; 4. **Call from Block with Forward Branch after Return:**    - Description: Define a function that calls another function within a `block`. Use a `br` to branch out of the block after the function call and ensure the proper return value after the branch.    - Constraint: This test verifies that the `br` instruction maintains correct control flow and operand stack management in the presence of function calls within blocks.

(assert_invalid
  (module
    (func $test
      (block (result i32)
        (call $callee)
        (br 0)
      )
      (i32.const 1)
    )
    (func $callee)
  )
  "type mismatch"
)